@@ -1,12 +1,12 @@
 Package: lme4
 Version: 0.9975-7
-Date: 2006-10-18
+Date: 2006-10-19
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit linear and generalized linear mixed-effects models.
-Depends: methods, R(>= 2.4.0), Matrix(>= 0.9975-3), lattice
+Depends: methods, R(>= 2.4.0), Matrix(>= 0.9975-5), lattice
 LinkingTo: Matrix
 Imports: graphics, stats
 Suggests: mlmRev, coda
